[] Add entry size to the available filters to be able view entries.
[] Warn users during database open and entry import if there are entries
with large text fields (e.g. Notes) that cannot be fully displayed and may
be truncated if edited.

Changes to Existing Features in 3.21.1
======================================
None

Bugs fixed in 3.21.1
====================
[2984527] Database preferences (including the Idle Timer setting) now retained
during a locking minimize to the System Tray.
[2977941] The password expiry date is now updated during edit if the password
is changed either via the Generate button or by the user manually editing it.
[2977045] Can now make password expiration date any value from the current
date.
[2962916] Save toolbar button only enabled if database is R/W and has been
changed since last saved.
[2962847] Fix password length checking to be between 4 and 1024 during
menu Generate Password option & Password Policy setting as per previous
releases.
[2960709] Entry selected prior to workstation locking is reselected on
being restored after unlocking the workstation.
[2951871] Shortcut related menu items now returned to the Edit menu and
the "Run Command", "Browse to URL", "Browse to URL + Autotype" and
"Send email" functions now work again, when a Shortcut entry is selected.
[2897661, 2779654] Group expand/collapse state restored after the database
is Locked, Minimized or "AutoType with Minimize" and then Restored.
[] Use of External Editor on Notes field from Edit dialog now activates Apply
and OK buttons.
[] Fix errors if importing an XML file with entries with duplicate unique IDs
(UUID elements).

New Features for 3.21
=====================
[2940756] Add "Apply" button to Edit property pages so that
intermediate changes can be saved without closing the Edit property pages.
[2919319] PasswordSafe can now be used as a password generator via the
Manage menu.
[2616175] Allows user to retry finding the original database if not