@@ -433,32 +433,31 @@ STYLE DS_SETFONT | WS_CHILD | WS_DISABLED | WS_CAPTION | WS_SYSMENU
 CAPTION "Misc."
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
-    CONTROL         "Confirm deletion of items",IDC_CONFIRMDELETE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,9,226,10
     CONTROL         "Record last access times",IDC_MAINTAINDATETIMESTAMPS,
-                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,7,23,226,10
-    CONTROL         "Escape key closes application",IDC_ESC_EXITS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,37,226,10
-    CONTROL         "Hot Key",IDC_HOTKEY_ENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,51,48,10
-    CONTROL         "HotKey1",IDC_HOTKEY_CTRL,"msctls_hotkey32",WS_BORDER | WS_TABSTOP,55,49,80,14
-    RTEXT           "Double-click action",IDC_STATIC,7,70,70,10
-    COMBOBOX        IDC_DOUBLE_CLICK_ACTION,81,68,152,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
-    GROUPBOX        "Autotype",IDC_STATIC,7,82,226,43
-    CONTROL         "Minimize after Autotype",IDC_MINIMIZEONAUTOTYPE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,94,212,10
-    RTEXT           "Default Autotype string:",IDC_STATIC,11,110,131,8
-    EDITTEXT        IDC_DEFAULTAUTOTYPE,145,108,83,12,ES_AUTOHSCROLL
-    GROUPBOX        "Default Username",IDC_STATIC,7,126,226,51
-    CONTROL         "Use",IDC_USEDEFUSER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,140,38,10,WS_EX_TOPMOST | 0x2L
-    EDITTEXT        IDC_DEFUSERNAME,51,139,79,12,ES_AUTOHSCROLL | WS_DISABLED
-    LTEXT           "as default username",IDC_STATIC_USERNAME,133,141,96,8,WS_DISABLED
+                    "Button",BS_AUTOCHECKBOX | BS_MULTILINE | WS_TABSTOP,7,8,226,10
+    CONTROL         "Escape key closes application",IDC_ESC_EXITS,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,22,226,10
+    CONTROL         "Hot Key",IDC_HOTKEY_ENABLE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,36,48,10
+    CONTROL         "HotKey1",IDC_HOTKEY_CTRL,"msctls_hotkey32",WS_BORDER | WS_TABSTOP,55,34,80,14
+    RTEXT           "Double-click action",IDC_STATIC,7,55,70,10
+    COMBOBOX        IDC_DOUBLE_CLICK_ACTION,81,53,152,49,CBS_DROPDOWNLIST | CBS_SORT | WS_VSCROLL | WS_TABSTOP
+    GROUPBOX        "Autotype",IDC_STATIC,7,67,226,43
+    CONTROL         "Minimize after Autotype",IDC_MINIMIZEONAUTOTYPE,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,79,212,10
+    RTEXT           "Default Autotype string:",IDC_STATIC,11,95,131,8
+    EDITTEXT        IDC_DEFAULTAUTOTYPE,145,93,83,12,ES_AUTOHSCROLL
+    GROUPBOX        "Default Username",IDC_STATIC,7,111,226,51
+    CONTROL         "Use",IDC_USEDEFUSER,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,125,38,10,WS_EX_TOPMOST | 0x2L
+    EDITTEXT        IDC_DEFUSERNAME,51,124,79,12,ES_AUTOHSCROLL | WS_DISABLED
+    LTEXT           "as default username",IDC_STATIC_USERNAME,133,126,96,8,WS_DISABLED
     CONTROL         "Query user to set default username",IDC_QUERYSETDEF,
-                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,159,212,10
-    GROUPBOX        "Alternate Browser ",IDC_STATIC,7,180,226,49
-    EDITTEXT        IDC_OTHERBROWSERLOCATION,11,193,179,12,ES_AUTOHSCROLL | WS_GROUP
-    PUSHBUTTON      "Browse",IDC_BROWSEFORLOCATION_BROWSER,196,192,31,14
-    EDITTEXT        IDC_ALTBROWSER_CMDLINE,11,210,92,14,ES_AUTOHSCROLL
-    LTEXT           "Browser Command Line parameters",IDC_STATIC,108,213,116,8
-    GROUPBOX        "Alternate Notes Text Editor",IDC_STATIC,7,232,226,35
-    EDITTEXT        IDC_OTHEREDITORLOCATION,11,245,179,12,ES_AUTOHSCROLL | WS_GROUP
-    PUSHBUTTON      "Browse",IDC_BROWSEFORLOCATION_EDITOR,196,244,31,14
+                    "Button",BS_AUTOCHECKBOX | WS_TABSTOP,12,144,212,10
+    GROUPBOX        "Alternate Browser ",IDC_STATIC,7,165,226,49
+    EDITTEXT        IDC_OTHERBROWSERLOCATION,11,178,179,12,ES_AUTOHSCROLL | WS_GROUP
+    PUSHBUTTON      "Browse",IDC_BROWSEFORLOCATION_BROWSER,196,177,31,14
+    EDITTEXT        IDC_ALTBROWSER_CMDLINE,11,195,92,14,ES_AUTOHSCROLL
+    LTEXT           "Browser Command Line parameters",IDC_STATIC,108,198,116,8
+    GROUPBOX        "Alternate Notes Text Editor",IDC_STATIC,7,217,226,35
+    EDITTEXT        IDC_OTHEREDITORLOCATION,11,230,179,12,ES_AUTOHSCROLL | WS_GROUP
+    PUSHBUTTON      "Browse",IDC_BROWSEFORLOCATION_EDITOR,196,229,31,14
 END
 
 IDD_PS_BACKUP DIALOGEX 0, 0, 240, 242
